# SFMLBreakout

./: .clang-format  CMakeLists.txt  LICENSE  TODO
src/: ball.cpp  ball.h  border.cpp  border.h  brick.cpp  brick.h  config.h  grid.cpp  grid.h  main.cpp  paddle.cpp  paddle.h  spriteEx.h
